examples/c/negative/invalid_pointer_addition.pc
int main() { int a; int b; int *p=&a; int *q=&b; return p+q; }
